# sirraya-ml-dsa-65

./: Cargo.toml  LICENSE  README.md  analysis_canonical_doc.txt  analysis_credential.json  canonical_output.nq  canonical_output_urda2015.nq  debug_canonical_config.txt  debug_canonical_config_jcs.txt  debug_canonical_doc.txt  debug_canonical_doc_jcs.txt  debug_proof_config.json  debug_unsigned_vc.json  debug_vc.json  degree_bs_computer_science.json  degree_bs_computer_science.min.json  did_document.json  multi_key_did.json  public_key.jwk  public_key.pem  secret_key.jwk  secret_key.pem  signed-mldsa65-rdfc-2024.json  test_vc.canonical.nq  test_vc_rdfc_proper.json  verification_report_20260409_204939.txt  verification_report_20260409_205234.txt  verification_report_20260409_210312.txt  verification_report_20260409_210935.txt  verification_report_20260409_210958.txt  verification_report_20260418_193849.txt  verification_report_20260418_194159.txt  verification_report_20260419_220150.txt
.github/workflows/: build.yml  ci.yml
demo/: Cargo.toml  demo_vc.json
demo/src/: main.rs
examples/: acvp_kat.rs  acvp_test.rs  analysis.rs  debug_shake256.rs  did_document_demo.rs  enterprise_command_center.rs  enterprise_guide.md  enterprise_keygen.rs  enterprise_sign.rs  enterprise_verify.rs  generate_test_vectors.rs  masked_test.rs  medical_compliance.rs  mldsa-65-vc-generate.rs  practice_example.rs  rdfc_test.rs  sign_verify_demo.rs  sirraya_hsm.rs  standard_test.rs  usage.rs  verify_outputs.rs  verify_vc.rs  verify_vc_rdfc.rs  w3c_vc_demo.rs
issuer_keys/: did.json  issuer_info.json
src/: constants.rs  dilithium_masked.rs  dlilithium_old.txt  lib.rs  main.rs  ml_dsa_65.rs  polynomial.rs  rdfc.rs  vc_verifier.rs
testVectors/inputs/: KeysMLDSA65.json  baseDocument.json  baseProofOptions.json  proofOptions.json  unsignedDocument.json
testVectors/mldsa65-jcs-2024/: canonicalDocument.txt  canonicalProofConfig.txt  hash.hex  hashData.json  signature.hex  signedCredential.json
validation_artifacts/: enterprise_validation_report.json  validation_metrics.json
validation_reports/: performance_metrics.csv
wasm/: Cargo.toml  index.html
wasm/pkg/: sirraya_ml_dsa_65_wasm.d.ts  sirraya_ml_dsa_65_wasm.js  sirraya_ml_dsa_65_wasm_bg.wasm  sirraya_ml_dsa_65_wasm_bg.wasm.d.ts
wasm/src/: lib.rs
