[package]
name = "ml-dsa-65"
version = "0.1.0"
edition = "2021"
description = "ML-DSA-65 Post-Quantum Digital Signatures (FIPS 204) with W3C Verifiable Credentials"
license = "MIT"
authors = ["Sirraya Labs"]
repository = "https://github.com/sirraya-labs/sirraya-ml-dsa-65"

[dependencies]
# Core cryptographic
sha3 = "0.10"
rand = "0.8"
rand_chacha = "0.10.0"
rand_core = { version = "0.6", features = ["std"], optional = true }
getrandom = { version = "0.2", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }
hex = { version = "0.4.3", optional = true }

# W3C VC support
multibase = { version = "0.9", optional = true }
uuid = { version = "1.5", features = ["serde", "v4"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
json-ld = { version = "0.21", features = ["reqwest", "serde"], optional = true }
rdf-canon = { version = "0.15.0-alpha.6", optional = true }
rdf-types = { version = "0.15", optional = true }
iref = { version = "3.2", optional = true }
static-iref = { version = "3.0", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"], optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }

# Enterprise
rayon = { version = "1.8", optional = true }
csv = { version = "1.3", optional = true }
bincode = { version = "2.0.0-rc.3", optional = true }

# Medical / HSM
aes-gcm = { version = "0.10", optional = true }
zeroize = { version = "1.7", features = ["zeroize_derive"], optional = true }
regex = { version = "1.10", optional = true }

# Always required
bs58 = "0.5.1"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["std"]
std = ["rand_core/std", "getrandom/std"]
masking = []

serde_support = ["dep:serde", "dep:serde_json", "dep:base64", "dep:hex"]
pqc = ["dep:rayon", "dep:csv"]

w3c = [
    "dep:serde",
    "dep:serde_json",
    "dep:base64",
    "dep:uuid",
    "dep:chrono",
    "dep:hex",
    "dep:multibase",
    "dep:json-ld",
    "dep:rdf-canon",
    "dep:rdf-types",
    "dep:iref",
    "dep:tokio",
    "dep:reqwest"
]

medical = [
    "dep:serde",
    "dep:serde_json",
    "dep:base64",
    "dep:bincode",
    "dep:uuid",
    "dep:chrono",
    "dep:regex",
    "dep:aes-gcm",
    "dep:zeroize",
    "dep:rayon",
    "dep:hex"
]

hsm = [
    "dep:serde",
    "dep:serde_json",
    "dep:uuid",
    "dep:aes-gcm",
    "dep:zeroize",
    "dep:hex"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# ============ EXAMPLES ============
[[example]]
name = "sign_verify_demo"
path = "examples/sign_verify_demo.rs"

[[example]]
name = "standard_test"
path = "examples/standard_test.rs"

[[example]]
name = "practice_basic"
path = "examples/practice_basic.rs"

[[example]]
name = "verify_vc"
path = "examples/verify_vc.rs"
required-features = ["w3c"]

[[example]]
name = "verify_vc_rdfc"
path = "examples/verify_vc_rdfc.rs"
required-features = ["w3c"]

[[example]]
name = "mldsa-65-vc-generate"
path = "examples/mldsa-65-vc-generate.rs"
required-features = ["w3c"]

[[example]]
name = "did_document_demo"
path = "examples/did_document_demo.rs"
required-features = ["w3c"]

[[example]]
name = "w3c_vc_demo"
required-features = ["w3c"]

[[example]]
name = "sign_verify_demo_masked"
path = "examples/sign_verify_demo.rs"
required-features = ["masking"]

[[example]]
name = "verify_outputs"
path = "examples/verify_outputs.rs"
required-features = ["serde_support"]

[[example]]
name = "enterprise_keygen"
path = "examples/enterprise_keygen.rs"
required-features = ["serde_support", "pqc"]

[[example]]
name = "enterprise_sign"
path = "examples/enterprise_sign.rs"
required-features = ["serde_support", "pqc"]

[[example]]
name = "enterprise_verify"
path = "examples/enterprise_verify.rs"
required-features = ["serde_support", "pqc"]

[[example]]
name = "enterprise_full_pipeline"
path = "examples/enterprise_full_pipeline.rs"
required-features = ["serde_support", "pqc"]

[[example]]
name = "hsm_integration"
path = "examples/hsm_integration.rs"
required-features = ["serde_support", "pqc"]

[[example]]
name = "key_rotation"
path = "examples/key_rotation.rs"
required-features = ["serde_support", "pqc", "chrono"]

[[example]]
name = "audit_logging"
path = "examples/audit_logging.rs"
required-features = ["serde_support", "pqc", "chrono"]

[[example]]
name = "medical_compliance"
path = "examples/medical_compliance.rs"
required-features = ["medical"]

[[example]]
name = "sirraya_hsm"
path = "examples/sirraya_hsm.rs"
required-features = ["hsm"]

[[bin]]
name = "ml-dsa-65"
path = "src/main.rs"

[[bin]]
name = "vc_verify"
path = "src/vc_verifier.rs"
required-features = ["w3c"]