[package]
name = "sirraya-ml-dsa-65"
version = "0.1.0"
edition = "2021"
description = "ML-DSA-65 Post-Quantum Digital Signatures (FIPS 204) with W3C Verifiable Credentials"
license = "MIT"
authors = ["Sirraya Labs"]
repository = "https://github.com/sirraya-labs/sirraya-ml-dsa-65"

[dependencies]
# Core cryptographic
sha3 = "0.10"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.10.0"
rand_core = { version = "0.6", features = ["std"], optional = true }
getrandom = { version = "0.2", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }
hex = { version = "0.4.3", optional = true }

# W3C VC support
multibase = { version = "0.9", optional = true }
uuid = { version = "1.5", features = ["serde", "v4"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

# Always required
bs58 = "0.5.1"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["std"]
std = ["rand_core/std", "getrandom/std"]
masking = []

w3c = [
    "dep:serde",
    "dep:serde_json",
    "dep:base64",
    "dep:uuid",
    "dep:chrono",
    "dep:hex",
    "dep:multibase",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# ============ EXAMPLES ============
[[example]]
name = "verify_vc"
path = "examples/verify_vc.rs"
required-features = ["w3c"]

[[example]]
name = "mldsa-65-vc-generate"
path = "examples/mldsa-65-vc-generate.rs"
required-features = ["w3c"]



# ============ BINARIES ============
[[bin]]
name = "ml-dsa-65"
path = "src/main.rs"